--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -100,4 +100,17 @@
             </li>
         </ul>
     </div>
+    <div>
+        <div class="TypeTitle">查询工具</div>
+        <ul class="ul_tools">
+            <li class="li_tool">
+                <a href="/ShowIp" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-g"></use>
+                    </svg>
+                    <span class="sp_toolname">Ip查询</span>
+               </a>
+            </li>
+        </ul>
+    </div>
 </div>
