--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -98,6 +98,14 @@
                     <span class="sp_toolname">简单主图生成</span>
                </a>
             </li>
+            <li class="li_tool">
+                <a href="/CodeGeneration" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-tupian"></use>
+                    </svg>
+                    <span class="sp_toolname">代码生成</span>
+               </a>
+            </li>
         </ul>
     </div>
     <div>
