--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -101,9 +101,9 @@
             <li class="li_tool">
                 <a href="/CodeGeneration" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-tupian"></use>
+                        <use xlink:href="#icon-shipin"></use>
                     </svg>
-                    <span class="sp_toolname">代码生成</span>
+                    <span class="sp_toolname">视频嵌入代码</span>
                </a>
             </li>
         </ul>
