modified:   .vs/ToolApp/DesignTimeBuild/.dtbcache.v2

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,13 @@
     <script src="~/lib/jsoneditor/jsoneditor.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/qrcode/qrcode.min.js"></script>
+    <!-- 导入样式 -->
+    <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css" />
+    <!-- 导入 Vue 3 -->
+    <script src="//unpkg.com/vue@3"></script>
+    <!-- 导入组件库 -->
+    <script src="https://unpkg.com/element-plus"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <header>
