--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewData["Title"] = "在线工具";
 }
-
 <div class="text-center">
     <div>
         <div class="TypeTitle">转换工具</div>
@@ -117,6 +116,14 @@
                         <use xlink:href="#icon-g"></use>
                     </svg>
                     <span class="sp_toolname">Ip查询</span>
+               </a>
+            </li>
+            <li class="li_tool">
+                <a href="/QueryTools/GetImages" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-g"></use>
+                    </svg>
+                    <span class="sp_toolname">一键下载图片</span>
                </a>
             </li>
         </ul>
