modified:   Properties/PublishProfiles/FolderProfile.pubxml.user

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -121,7 +121,7 @@
             <li class="li_tool">
                 <a href="/QueryTools/GetImages" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-g"></use>
+                        <use xlink:href="#"></use>
                     </svg>
                     <span class="sp_toolname">一键下载图片</span>
                </a>
