--- a/Pages/QueryTools/GetImages.cshtml
+++ b/Pages/QueryTools/GetImages.cshtml
@@ -55,28 +55,28 @@
                     });;
             },
             DownImages() {
-                var self = this;
-                for (var i in self.images) {
-                    var image = new Image()
-                    // 解决跨域 Canvas 污染问题
-                    image.crossOrigin = "Anonymous";
-                    image.addEventListener("load", self.imageReceived, false);
-                    image.onload = function() {
-                        var canvas = document.createElement('canvas');
-                        canvas.width = image.width;
-                        canvas.height = image.height;
-                        var context = canvas.getContext('2d');
-                        context.drawImage(image, 0, 0, image.width, image.height);
-                        var url = canvas.toDataURL('image/png'); // 得到图片的base64编码数据
-                        console.log(url);
-                        var a = document.createElement('a'); // 生成一个a元素
-                        var event = new MouseEvent('click'); // 创建一个单击事件
-                        a.download = "123"; // 设置图片名称
-                        a.href = url; // 将生成的URL设置为a.href属性
-                        a.dispatchEvent(event); // 触发a的单击事件
-                    }
-                    image.src = self.images[i];
-                }
+                //var self = this;
+                //for (var i in self.images) {
+                //    var image = new Image()
+                //    // 解决跨域 Canvas 污染问题
+                //    image.crossOrigin = "Anonymous";
+                //    image.addEventListener("load", self.imageReceived, false);
+                //    image.onload = function() {
+                //        var canvas = document.createElement('canvas');
+                //        canvas.width = image.width;
+                //        canvas.height = image.height;
+                //        var context = canvas.getContext('2d');
+                //        context.drawImage(image, 0, 0, image.width, image.height);
+                //        var url = canvas.toDataURL('image/png'); // 得到图片的base64编码数据
+                //        console.log(url);
+                //        var a = document.createElement('a'); // 生成一个a元素
+                //        var event = new MouseEvent('click'); // 创建一个单击事件
+                //        a.download = "123"; // 设置图片名称
+                //        a.href = url; // 将生成的URL设置为a.href属性
+                //        a.dispatchEvent(event); // 触发a的单击事件
+                //    }
+                //    image.src = self.images[i];
+                //}
             }
         }
     };
