modified:   .vs/ToolApp/DesignTimeBuild/.dtbcache.v2

--- a/Pages/QueryTools/GetImages.cshtml
+++ b/Pages/QueryTools/GetImages.cshtml
@@ -11,7 +11,7 @@
                 </el-form-item>
                 <el-form-item>
                     <el-button type="primary" @@click="GetImages()">获取图片</el-button>
-                    <el-button type="primary" @@click="DownImages()">下载</el-button>
+                    <el-button type="primary" @@click="DownImages()">下载图片</el-button>
                 </el-form-item>
             </el-form>
             <div class="demo-image" style="display: flex;flex-wrap: wrap;justify-content: space-between;">
