modified:   .vs/ToolApp/DesignTimeBuild/.dtbcache.v2

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="TypeTitle">转换工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/BinaryConversion" class="a_tool">
+                <a href="/ConvertTools/BinaryConversion" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-binarycode"></use>
                     </svg>
@@ -16,7 +16,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="/ColorConvert" class="a_tool">
+                <a href="/ConvertTools/ColorConvert" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-dixiayanse"></use>
                     </svg>
@@ -30,7 +30,7 @@
         <div class="TypeTitle">文本工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/JsonFormat" class="a_tool">
+                <a href="./TxtTools/JsonFormat" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-json"></use>
                     </svg>
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li class="li_tool">
-                <a href="/MarkdownEdit" class="a_tool">
+                <a href="./TxtTools/MarkdownEdit" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-md"></use>
                     </svg>
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="li_tool">
-                <a href="/Regular" class="a_tool">
+                <a href="./TxtTools/Regular" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-a-regex1x"></use>
                     </svg>
@@ -60,7 +60,7 @@
         <div class="TypeTitle">编码转换</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/EncodeDecode" class="a_tool">
+                <a href="./CodeTools/EncodeDecode" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-bianma"></use>
                     </svg>
@@ -74,7 +74,7 @@
         <div class="TypeTitle">生成工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/GuidCreate" class="a_tool">
+                <a href="./CreateTools/GuidCreate" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-g"></use>
                     </svg>
@@ -82,7 +82,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="/QrCodeCreate" class="a_tool">
+                <a href="./CreateTools/QrCodeCreate" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-erweima"></use>
                     </svg>
@@ -90,7 +90,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="http://backimg.cn/" class="a_tool">
+                <a href="./BackImg/index.html" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-tupian"></use>
                     </svg>
@@ -98,7 +98,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="/CodeGeneration" class="a_tool">
+                <a href="./CreateTools/CodeGeneration" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-shipin"></use>
                     </svg>
@@ -111,7 +111,7 @@
         <div class="TypeTitle">查询工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/ShowIp" class="a_tool">
+                <a href="./QueryTools/ShowIp" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-g"></use>
                     </svg>
@@ -119,7 +119,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="/QueryTools/GetImages" class="a_tool">
+                <a href="./QueryTools/GetImages" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#"></use>
                     </svg>
