modified:   wwwroot/BackImg (modified content)

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="TypeTitle">转换工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
-                <a href="/ConvertTools/BinaryConversion" class="a_tool">
+                <a href="./ConvertTools/BinaryConvert" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-binarycode"></use>
                     </svg>
@@ -16,7 +16,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="/ConvertTools/ColorConvert" class="a_tool">
+                <a href="./ConvertTools/ColorConvert" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-dixiayanse"></use>
                     </svg>
