modified:   .vs/ToolApp/DesignTimeBuild/.dtbcache.v2

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -102,8 +102,16 @@
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-shipin"></use>
                     </svg>
-                    <span class="sp_toolname">视频嵌入代码</span>
+                    <span class="sp_toolname">视频嵌入代码生成</span>
                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./CreateTools/GoodGeneration" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-gouwu"></use>
+                    </svg>
+                    <span class="sp_toolname">商品卡片生成</span>
+                </a>
             </li>
         </ul>
     </div>
@@ -124,6 +132,14 @@
                         <use xlink:href="#"></use>
                     </svg>
                     <span class="sp_toolname">一键下载图片</span>
+               </a>
+            </li>
+            <li class="li_tool">
+                <a href="./QueryTools/" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#"></use>
+                    </svg>
+                    <span class="sp_toolname">优惠券查询</span>
                </a>
             </li>
         </ul>
