--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -70,8 +70,9 @@
     <script src="~/lib/MarkDown/lib/sequence-diagram.min.js"></script>
     <script src="~/lib/MarkDown/lib/flowchart.min.js"></script>
     <script src="~/lib/MarkDown/lib/jquery.flowchart.min.js"></script>
-    
-    
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
