优惠券查询

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -135,7 +135,7 @@
                </a>
             </li>
             <li class="li_tool">
-                <a href="./QueryTools/" class="a_tool">
+                <a href="./QueryTools/GetPreferentialProducts" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#"></use>
                     </svg>
