--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,83 @@
 }
 <div class="text-center">
     <div>
+        <div class="TypeTitle">常用对照表</div>
+        <ul class="ul_tools">
+            <li class="li_tool">
+                <a href="./TableTools/MimiType" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-fenlei"></use>
+                    </svg>
+                    <span class="sp_toolname">常见 MimeType 参考表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/CssSelectors" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-css"></use>
+                    </svg>
+                    <span class="sp_toolname">CSS 选择器参考表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/VimCommand" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-vim"></use>
+                    </svg>
+                    <span class="sp_toolname">Vim命令参考表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/GitCommand" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-git1"></use>
+                    </svg>
+                    <span class="sp_toolname">Git命令参考表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/Emoji" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-EMOJI-"></use>
+                    </svg>
+                    <span class="sp_toolname">Emoji表情符号</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/Linux" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-linux"></use>
+                    </svg>
+                    <span class="sp_toolname">Linux常用命令</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/SpecialSymbols" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-teshufuhao"></use>
+                    </svg>
+                    <span class="sp_toolname">特殊符号大全</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/HttpStatusCode" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-10httpshujujiaohumoban"></use>
+                    </svg>
+                    <span class="sp_toolname">HTTP状态码对照表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="./TableTools/UrlEscapeCode" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-url"></use>
+                    </svg>
+                    <span class="sp_toolname">Url转义字符参考表</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div>
         <div class="TypeTitle">转换工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
@@ -30,6 +107,14 @@
         <div class="TypeTitle">文本工具</div>
         <ul class="ul_tools">
             <li class="li_tool">
+                <a href="./TxtTools/WordCount" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-json"></use>
+                    </svg>
+                    <span class="sp_toolname">字数统计</span>
+                </a>
+            </li>
+            <li class="li_tool">
                 <a href="./TxtTools/JsonFormat" class="a_tool">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-json"></use>
@@ -50,10 +135,9 @@
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-a-regex1x"></use>
                     </svg>
-
                     <span class="sp_toolname">正则表达式</span>
                 </a>
-            </li>     
+            </li>
         </ul>
     </div>
 
@@ -122,7 +206,7 @@
             <li class="li_tool">
                 <a href="./QueryTools/ShowIp" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-g"></use>
+                        <use xlink:href="#icon-bangong"></use>
                     </svg>
                     <span class="sp_toolname">Ip查询</span>
                </a>
@@ -130,7 +214,7 @@
             <li class="li_tool">
                 <a href="./QueryTools/GetImages" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#"></use>
+                        <use xlink:href="#icon-tupian"></use>
                     </svg>
                     <span class="sp_toolname">一键下载图片</span>
                </a>
@@ -138,7 +222,7 @@
             <li class="li_tool">
                 <a href="./QueryTools/GetPreferentialProducts" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#"></use>
+                        <use xlink:href="#icon-bianxian"></use>
                     </svg>
                     <span class="sp_toolname">优惠券查询</span>
                </a>
