--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,25 +1,38 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Components.Web;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ToolApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <base href="~/" />
+
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/jsoneditor/jsoneditor.min.css" rel="stylesheet" type="text/css" />
     <link href="~/lib/MarkDown/css/editormd.css" rel="stylesheet" />
     <link href="~/lib/MarkDown/css/editormd.preview.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/jsoneditor/jsoneditor.min.css" rel="stylesheet" type="text/css"/>
+
     <script src="~/lib/jsoneditor/jsoneditor.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
     <script src="~/lib/qrcode/qrcode.min.js"></script>
     <!-- 导入样式 -->
     <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css" />
     <!-- 导入 Vue 3 -->
-    <script src="//unpkg.com/vue@3"></script>
+@* <script src="//unpkg.com/vue@3"></script> *@
     <!-- 导入组件库 -->
-    <script src="https://unpkg.com/element-plus"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+@* <script src="https://unpkg.com/element-plus"></script> *@
+@* <script src="https://unpkg.com/axios/dist/axios.min.js"></script> *@
+    <!-- 导入组件库 -->
+    <link href="~/lib/github-markdown-css/github-markdown-light.css" rel="stylesheet" type="text/css" />
+    <!--阿里图标 -->
+    <script src="//at.alicdn.com/t/c/font_2344911_fpf5mihiwg.js"></script>
+    <!--有些js会有冲突导致报错，无法加载组件，可在页面单独处理-->
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <script src ="~/_framework/blazor.server.js"></script>
 </head>
 <body>
     <header>
@@ -30,49 +43,17 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">首页</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        @RenderBody()
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy;2021 - ToolApp - <a asp-page="./Article" asp-route-filename="小程序.md">小程序</a> - <a asp-page="./Article" asp-route-filename="关于.md">关于</a>
+            &copy;2021 - ToolApp - <a asp-page="./Article" asp-route-filename="小程序.md">小程序</a> - <a href="/About">关于</a>
         </div>
     </footer>
-
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    
-    <script src="//at.alicdn.com/t/font_2344911_mzi8n5afjpf.js"></script>
-    <script src="//at.alicdn.com/t/font_2344911_oig4om1t41.js"></script>
-    <script src="//at.alicdn.com/t/font_2344911_em1wiwgnmbv.js"></script>
-    <script src="//at.alicdn.com/t/font_2344911_qfri54p4art.js"></script>
-    <script src="//at.alicdn.com/t/font_2344911_w53qesxzeye.js"></script>
-    <script src="//at.alicdn.com/t/font_2344911_g55auo9llw.js"></script>
-    
-    <script src="~/lib/MarkDown/js/editormd.js"></script>
-    <script src="~/lib/MarkDown/lib/marked.min.js"></script>
-    <script src="~/lib/MarkDown/lib/prettify.min.js"></script>
-    <script src="~/lib/MarkDown/lib/raphael.min.js"></script>
-    <script src="~/lib/MarkDown/lib/underscore.min.js"></script>
-    <script src="~/lib/MarkDown/lib/sequence-diagram.min.js"></script>
-    <script src="~/lib/MarkDown/lib/flowchart.min.js"></script>
-    <script src="~/lib/MarkDown/lib/jquery.flowchart.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
