--- a/Pages/TxtTools/JsonFormat.cshtml
+++ b/Pages/TxtTools/JsonFormat.cshtml
@@ -5,6 +5,7 @@
 }
 <div class="text-left">
     <h3>@ViewData["Title"]</h3>
+    <p>JSON 校验工具，可以检查输入的 JSON 字符串是否符合 JSON 规范。同时，本工具还集成了 JSON 代码格式化和压缩的功能，可以对符合规范的 JSON 字符串进行格式化和压缩；JSON 校验工具还提供了转义和生成对应 GET 参数的功能，它是开发人员必备的在线辅助工具之一。</p>
     <div class="JsonConvert">
         <textarea name="" id="jsoninput" cols="50" rows="10" oninput="JsonFormat()"></textarea>
         <div id="jsonview" cols="50"></div>
