--- a/Pages/TxtTools/MarkdownEdit.cshtml
+++ b/Pages/TxtTools/MarkdownEdit.cshtml
@@ -5,56 +5,64 @@
 }
 <div class="text-left">
     <h3>@ViewData["Title"]</h3>
+    <p>本工具提供在线 Markdown 编辑功能，主要功能包括：支持标准 Markdown语法，支持自动识别 HTML 标签以及自动识别链接、Email 地址；支持基于 KaTeX 的 TeX 科学公式，支持自动保存功能以及实时预览功能。</p>
     <div id="MarkdownEdit">
         <textarea name="" id="TextMarkdownEdit" cols="30" rows="10"></textarea>
     </div>
-<div id="content_view">      
-    <textarea id="content_editor" style="display:none;">@ViewData["Content"]</textarea>
 </div>
-</div>
+
+<script src="~/lib/MarkDown/js/editormd.js"></script>
+<script src="~/lib/MarkDown/lib/marked.min.js"></script>
+<script src="~/lib/MarkDown/lib/prettify.min.js"></script>
+<script src="~/lib/MarkDown/lib/raphael.min.js"></script>
+<script src="~/lib/MarkDown/lib/underscore.min.js"></script>
+<script src="~/lib/MarkDown/lib/sequence-diagram.min.js"></script>
+<script src="~/lib/MarkDown/lib/flowchart.min.js"></script>
+<script src="~/lib/MarkDown/lib/jquery.flowchart.min.js"></script>
+
 <script>
-    $(function(){
+    $(function () {
         testEditormdView = editormd("MarkdownEdit", {
             width: "100%",
-			height: 600,
-			path: '/lib/MarkDown/lib/',
-			//theme: "dark",
-			//previewTheme: "dark",
-			//editorTheme: "pastel-on-dark",
-			//markdown: "",
-			//codeFold: true,
-			//syncScrolling : false,
-			saveHTMLToTextarea: true,    // 保存 HTML 到 Textarea
-			searchReplace: true,
-			//watch : true,                // 关闭实时预览
-			htmlDecode: "style,script,iframe|on*",            // 开启 HTML 标签解析，为了安全性，默认不开启    
-			//toolbar  : true,             //关闭工具栏
-			//previewCodeHighlight : false, // 关闭预览 HTML 的代码块高亮，默认开启
-			emoji: true,
-			taskList: true,
-			//tocm: true,         // Using [TOCM]
-			tex: true,                   // 开启科学公式TeX语言支持，默认关闭
-			flowChart: true,             // 开启流程图支持，默认关闭
-			sequenceDiagram: true,       // 开启时序/序列图支持，默认关闭,
-			//dialogLockScreen : false,   // 设置弹出层对话框不锁屏，全局通用，默认为true
-			//dialogShowMask : false,     // 设置弹出层对话框显示透明遮罩层，全局通用，默认为true
-			//dialogDraggable : false,    // 设置弹出层对话框不可拖动，全局通用，默认为true
-			//dialogMaskOpacity : 0.4,    // 设置透明遮罩层的透明度，全局通用，默认值为0.1
-			//dialogMaskBgColor : "#000", // 设置透明遮罩层的背景颜色，全局通用，默认为#fff
-			//imageUpload: false,
-			//imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-			//imageUploadURL: "/Center/RichTextUpload",
-			//onload: function () {
-				//console.log('onload', this);
-				//this.fullscreen();
-				//this.unwatch();
-				//this.watch().fullscreen();
+            height: 600,
+            path: '/lib/MarkDown/lib/',
+            //theme: "dark",
+            //previewTheme: "dark",
+            //editorTheme: "pastel-on-dark",
+            //markdown: "",
+            //codeFold: true,
+            //syncScrolling : false,
+            saveHTMLToTextarea: true,    // 保存 HTML 到 Textarea
+            searchReplace: true,
+            //watch : true,                // 关闭实时预览
+            htmlDecode: "style,script,iframe|on*",            // 开启 HTML 标签解析，为了安全性，默认不开启
+            //toolbar  : true,             //关闭工具栏
+            //previewCodeHighlight : false, // 关闭预览 HTML 的代码块高亮，默认开启
+            emoji: true,
+            taskList: true,
+            //tocm: true,         // Using [TOCM]
+            tex: true,                   // 开启科学公式TeX语言支持，默认关闭
+            flowChart: true,             // 开启流程图支持，默认关闭
+            sequenceDiagram: true,       // 开启时序/序列图支持，默认关闭,
+            //dialogLockScreen : false,   // 设置弹出层对话框不锁屏，全局通用，默认为true
+            //dialogShowMask : false,     // 设置弹出层对话框显示透明遮罩层，全局通用，默认为true
+            //dialogDraggable : false,    // 设置弹出层对话框不可拖动，全局通用，默认为true
+            //dialogMaskOpacity : 0.4,    // 设置透明遮罩层的透明度，全局通用，默认值为0.1
+            //dialogMaskBgColor : "#000", // 设置透明遮罩层的背景颜色，全局通用，默认为#fff
+            //imageUpload: false,
+            //imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+            //imageUploadURL: "/Center/RichTextUpload",
+            //onload: function () {
+            //console.log('onload', this);
+            //this.fullscreen();
+            //this.unwatch();
+            //this.watch().fullscreen();
 
-				//this.setMarkdown("#PHP");
-				//this.width("100%");
-				//this.height(480);
-				//this.resize("100%", 640);
-			//}
+            //this.setMarkdown("#PHP");
+            //this.width("100%");
+            //this.height(480);
+            //this.resize("100%", 640);
+            //}
         });
     });
 </script>
