--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -79,6 +79,14 @@
                     <span class="sp_toolname">Url转义字符参考表</span>
                 </a>
             </li>
+            <li class="li_tool">
+                <a href="/TableTools/UsualNumber" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-url"></use>
+                    </svg>
+                    <span class="sp_toolname">常用电话列表</span>
+                </a>
+            </li>
         </ul>
     </div>
     <div>
