--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,13 +36,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">ToolApp</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </nav>
     </header>
@@ -52,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy;2021 - ToolApp - <a asp-page="./Article" asp-route-filename="小程序.md">小程序</a> - <a href="/About">关于</a>
+            &copy;2021 - ToolApp - <a href="/Weiapp">小程序</a> - <a href="/About">关于</a> - <a href="/Donation">赞赏</a>
         </div>
     </footer>
 </body>
