--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -82,9 +82,17 @@
             <li class="li_tool">
                 <a href="/TableTools/UsualNumber" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-url"></use>
+                        <use xlink:href="#icon-dianhua"></use>
                     </svg>
                     <span class="sp_toolname">常用电话列表</span>
+                </a>
+            </li>
+            <li class="li_tool">
+                <a href="/TableTools/Ascii" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-dianhua"></use>
+                    </svg>
+                    <span class="sp_toolname">ASCII字符参考</span>
                 </a>
             </li>
         </ul>
@@ -117,7 +125,7 @@
             <li class="li_tool">
                 <a href="./TxtTools/WordCount" class="a_tool">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-json"></use>
+                        <use xlink:href="#icon-shuliangtongji"></use>
                     </svg>
                     <span class="sp_toolname">字数统计</span>
                 </a>
