--- a/Pages/QueryTools/GetImages.cshtml
+++ b/Pages/QueryTools/GetImages.cshtml
@@ -4,8 +4,8 @@
 <div id="app">
     <el-row>
         <el-col :span="24">
-            <h2>一键下载网页图片</h2>
-            <el-form :model="formData">
+            <h2>一键下载网页图片（开发中）</h2>
+            @* <el-form :model="formData">
                 <el-form-item label="链接">
                     <el-input v-model="formData.inputUrl" />
                 </el-form-item>
@@ -18,7 +18,7 @@
                 <div v-for="image in images" :key="fit" style="width:49%;">
                     <el-image :src="image" :fit="fit" />
                 </div>
-            </div>
+            </div> *@
         </el-col>
     </el-row>
 </div>
