--- a/Pages/QueryTools/GetPreferentialProducts.cshtml
+++ b/Pages/QueryTools/GetPreferentialProducts.cshtml
@@ -5,9 +5,9 @@
 <div id="app">
     <el-row>
         <el-col :span="24">
-            <h2>商品搜索</h2>
+            <h2>商品搜索（开发中）</h2>
             <p>购物先领券</p>
-            <el-form :model="formData">
+@*             <el-form :model="formData">
                 <el-form-item label="">
                     <el-input v-model="formData.keyword" placeholder="商品关键字" />
                 </el-form-item>
@@ -40,7 +40,7 @@
                     </el-space>
 
                 </el-col>
-            </div>
+            </div> *@
         </el-col>
     </el-row>
 </div>
