--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <!-- 导入组件库 -->
     <link href="~/lib/github-markdown-css/github-markdown-light.css" rel="stylesheet" type="text/css" />
     <!--阿里图标 -->
-    <script src="//at.alicdn.com/t/c/font_2344911_fpf5mihiwg.js"></script>
+    <script src="//at.alicdn.com/t/c/font_2344911_462ux66iuo.js"></script>
     <!--有些js会有冲突导致报错，无法加载组件，可在页面单独处理-->
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <script src ="~/_framework/blazor.server.js"></script>
@@ -45,7 +45,7 @@
     <div class="container">
         @RenderBody()
     </div>
-
+    <div id="components-reconnect-modal" style="display:none;"></div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy;2021 - ToolApp - <a href="/Weiapp">小程序</a> - <a href="/About">关于</a> - <a href="/Donation">赞赏</a>
