--- a/Pages/TableTools/MimeType.razor
+++ b/Pages/TableTools/MimeType.razor
@@ -1,20 +1,3 @@
 ﻿@page "/TableTools/MimiType"
-@using Markdig;
-
-<article class="markdown-body">
-    @(new MarkupString(Result))
-</article>
-
-@code {
-    public string Result;
-
-    protected override async Task OnInitializedAsync()
-    {
-        string appPath = System.IO.Directory.GetCurrentDirectory();
-        string strContent = await FileHelp.GetFile(appPath + @"\Content\TableTools\MimeType.md");
-        var pipeline = new MarkdownPipelineBuilder()
-                        .UseAdvancedExtensions()
-                        .Build();
-        Result = Markdig.Markdown.ToHtml(strContent, pipeline);
-    }
-}
+@using ToolApp.Pages.Common
+<Description DescFileName="TableTools/MimeType.md"></Description>
