全站链接检测

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -243,6 +243,14 @@
                     <span class="sp_toolname">优惠券查询</span>
                </a>
             </li>
+            <li class="li_tool">
+                <a href="./QueryTools/CheckUrl" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-bianxian"></use>
+                    </svg>
+                    <span class="sp_toolname">网站链接检测工具</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
